--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -56,7 +56,7 @@
     <h3>Parça Yöntemi</h3>
     <p>Bulunduğu genişliği parçalara ayırarak kullanma yöntemidir. 24 farklı parça aralığı varsayılan olarak ayarlanmıştır. 1p, 2p, 3p, 4p, 5p, 6p, 8p, 7p, 8p, 9p, 10p, 11p, 12p, 13p, 14p, 15p, 16p, 17p, 18p, 19p, 20p, 21p, 22p, 23p, 24p olarak istediğiniz ekran ölçeğinde (gnl, byk, ort, ufk) kullanabilirsiniz. Örneğin 10p parça aralığını kullanacaksanız genişliği 10 eşit parçaların toplamına kadar kullanmak istediğinizi anlarız. Bununla birlikte farklı parça aralıklarını bir arada kullanabilme özelliği vardır. Buradan anlamanızı beklediğimiz, HTML dosyasının bir bölümünde 10p kullanıyorken, diğer bir bölümünde 16p kullanabilirsiniz.</p>
     <h4 class="beri-alt-1 beri-üst-1">Kullanımı</h4>
-    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-gnl="" ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
+    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-gnl=" " ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
@@ -92,10 +92,10 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
     </tr>
     <tr>
       <th>Sınıf önekleri</th>
-      <td>data-gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
-      <td>data-ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
-      <td>data-ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
-      <td>data-byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
+      <td>gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
+      <td>ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
+      <td>ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
+      <td>byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
     </tr>
     <tr>
       <th>Oran Ölçekleri</th>
