--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -23,23 +23,23 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body>
+<body class="kap ortala">
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div  class="ortala" data-gnl="23 24p">
-<div class="kaplama" data-gnl="3p" data-ufk="3p">
-  <div data-gnl="3">
+<div   data-gnl="23 24p">
+<div class="kaplama" data-gnl="24" data-ufk="24">
+  <div data-gnl="24">
     <h1>Renk Örgüsü</h1>
     <p>Renk örgüsü varsayılan olarak tanımlanmış bazı renk etiketleriyle kullanılmaktadır. "ana", "ara", "birincil", "ikincil" etiketleri kullanıcılar tarafından özelleştirilebilir renk grubudur. Bunların yanında özelleştirilebilen "dikkat", "tehlike", "bilgi", "olumlu", "olumsuz" renk etiketleri de kullanıcılar tarafından özelleştirilebilmektedir. Aşağıda renk örgüsünü kullanmak yönünde açıklamaları okuyunuz.</p>
   </div>
-  <div data-gnl="3">
+  <div data-gnl="24">
     <h2>Tanımlamalar</h2>
   </div>
-  <div data-gnl="3" data-ufk="1" style="font-size:13px;">
+  <div data-gnl="24" data-ufk="1" style="font-size:13px;">
     <p><b>Renklendirme Alanları:</b><br> metin - data-arka - kenar<br>
     Belirtilen 3 alana renklendirmeler yapabilirsiniz.<br><br>
     <b>Kullanım tipi:</b><br>( data-metin=" " data-arka=" " data-kenar=" " )<br> ( class="metin- data-arka- kenar-" )<br><br></p>
   </div>
-  <div data-gnl="3" data-ufk="1" style="font-size:13px;">
+  <div data-gnl="24" data-ufk="8" style="font-size:13px;">
     <p><b>Renk Grubu:</b><br>
       <span data-arka="ana" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0; margin-right:3px;"></span>ana -
       <span data-arka="ara" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0;margin-right:3px;"></span>ara -
@@ -58,12 +58,12 @@
       <span data-arka="beyaz" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:1px; border-style:solid;margin-right:3px;"></span>beyaz<br>
     <b>Kullanım tipi:</b><br>( data-metin="birincil" data-arka="ikincil" data-kenar="tam siyah" )<br> ( class="metin-birincil data-arka-ikincil kenar-tam-siyah" )<br><br></p>
   </div>
-  <div data-gnl="3" data-ufk="1" style="font-size:13px;">
+  <div data-gnl="24" data-ufk="8" style="font-size:13px;">
     <p><b>Renk Tonları:</b><br>100 - 200 - 300 - 400 - 500 - 600 - 700 - 800 - 900<br>
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
     <b>Kullanım tipi:</b><br>( data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800" )<br> ( class="metin-birincil metin-300 metin-soluk data-arka-ikincil data-arka-600 data-arka-parlak kenar-tam-siyah kenar-800" )<br><br></p>
   </div>
-  <div class="" data-gnl="4p">
+  <div class="" data-gnl="4 4p">
     <div data-gnl="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
@@ -143,9 +143,8 @@
     <div data-gnl="1" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
     <div data-gnl="1" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
     <div data-gnl="1" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
-
   </div>
-  <div data-gnl="3">
+  <div data-gnl="24">
     <h2>Örnek</h2>
   </div>
   <div data-gnl="1 2p">
