--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -24,21 +24,62 @@
   <![endif]-->
 </head>
 <body>
-  <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div class="ortala" data-gnl="24p">
-<div class="kaplama beri-alt-1" data-gnl="23">
-  <h1>Kap Örgüsü</h1>
-  <h2>Kap Örgüsü Nedir?</h2>
-  <p>Bir sayfanın içinde genişlikler belirleme örgüsüne kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak anlamını kodlama dünyasına yansıtabilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğer önyüz iskeletlerindeki kap örgülerinden farklıdır ve benzer yönleri de kapsamaktadır. Ayrıntılarıyla öğrenmenizi tavsiye ederiz.</p>
+  <div class="kaplama" data-gnl="12">
 
-  <h2>Konular</h2>
-  <div data-gnl="24">
-    <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
-    <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Kavramlar    </div>  </div>
-    <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Özellikler    </div>  </div>
-    <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Bilinmesi Gerekenler    </div>  </div>
-    <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Örnekler    </div>  </div>
-  </div>
+    <h1>Kap Örgüsü</h1>
+
+    <p>İşte bu! 1'den 24'e kadar olan sütun düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
+
+    <h2>Kap Örgüsü Nedir?</h2>
+
+    <p>Bir sayfanın içinde genişlikler belirlemeyi sağlayan örgüye kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak kodlama dünyasında kelimenin anlamını yerleştirebilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğerlerinin kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
+
+    <h2>Nasıl Çalışıyor?</h2>
+
+    <p>Deveb kap örgüsünde satır, sütun, gibi kavramlar kullanılmaz. Kap kelimesinin sahip olduğu anlam üzerine geliştirilmiştir. Bu örgüde 1'den 24'e kadar sayıları kullanarak çalışmalarınızı yapacaksınız. Sayıları kullanma şekline göre anlamları olan kap örgüsünün basitliğini anladığınızda çalışmanızı yazarken suyun akması gibi yazacaksınız.</p>
+
+    <p>Ekran ölçekleri ise gnl, ufk, ort, byk olarak isimlendirilir. Ekran ölçeği eğer gnl ise en küçük ekran genişliğinden en büyük ekran genişliğine doğru tüm ekranlara hitap eder. Eğer ekran ölçeğiniz ufk ise ufak ekran genişliğinden en büyük ekran genişliğine doğru kapsadığı tüm ekranlara hitap eder.</p>
+
+    <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:
+      <ul data-deveb>
+        <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
+        <li>"<span data-metin="dikkat">SAYI</span>"</li>
+        <li>"<span data-metin="dikkat">SAYIp</span>"</li>
+      </ul>
+    </p>
+
+    <h2>Kap Örgüsü Kavramları</h2>
+
+    <p>Kap örgüsünde parça miktarı ve parça düzeni kavramları ana kavramlardır. Parça miktarı dahil olduğu parça düzeninde kaç parçanın toplam genişliğini kullanmak istediğinizi belirtmek için kullanırsınız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmek için kullanırsınız. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
+
+    <h2>"SAYI SAYIp" Kullanımında Ne Olur?</h2>
+
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Ben bu html etiketini SAYIp düzeninde SAYI kadar parçanın toplam genişliğini kullanacağım."</p>
+
+    <p>Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir. Kullandığınız parça düzeni yavru html etiketleri için varsayılan kap parçası düzeni haline gelecektir.</p>
+
+    <h2>"SAYIp" >> "SAYI" Kullanımında Ne Olur?</h2>
+
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."</p>
+
+    <h2>"SAYI SAYIp" >> "SAYI" Kullanımında Ne Olur?</h2>
+
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."</p>
+
+    <h2>"SAYI SAYIp" >> "SAYI SAYIp" Kullanımında Ne Olur?</h2>
+
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim etiketin parça düzeni olacaktır. Ve bu HTML etiketin yavru etiketleri varsa onların varsayılan parça düzeni olacaktır."</p>
+
+    <h2>Konular</h2>
+    <div data-gnl="24">
+      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
+      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Kavramlar    </div>  </div>
+      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Özellikler    </div>  </div>
+      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Bilinmesi Gerekenler    </div>  </div>
+      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Örnekler    </div>  </div>
+    </div>
 
 <div>
   <div class="beri-üst-1 beri-alt-1">
