--- a/belgeler/kap-olcekleri/6p.html
+++ b/belgeler/kap-olcekleri/6p.html
@@ -1,32 +1,32 @@
 ---
 layout: default
 ---
-<div data-deveb="24">
+<div data-gnl="24">
   <h1>Kap Ölçekleri: 6p</h1>
   <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
 </div>
-<div class="" data-deveb="6 6p">
-  <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="1"</div></div>
-  <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="2"</div></div>
-  <div data-deveb="3"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3"</div></div>
-  <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="4"</div></div>
-  <div data-deveb="5"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="5"</div></div>
-  <div data-deveb="6"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="6"</div></div>
-  <div data-deveb="2 8p">
-    <div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="2 8p"</div>
-    <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="2 8p" > data-deveb="4"</div></div>
-    <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="2 8p" > data-deveb="4"</div></div>
+<div class="" data-gnl="6 6p">
+  <div data-gnl="1"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="1"</div></div>
+  <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="2"</div></div>
+  <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3"</div></div>
+  <div data-gnl="4"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="4"</div></div>
+  <div data-gnl="5"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="5"</div></div>
+  <div data-gnl="6"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="6"</div></div>
+  <div data-gnl="2 8p">
+    <div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="2 8p"</div>
+    <div data-gnl="4"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="2 8p" > data-gnl="4"</div></div>
+    <div data-gnl="4"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="2 8p" > data-gnl="4"</div></div>
   </div>
-  <div data-deveb="3 8p">
-    <div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p"</div>
-    <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="4"</div></div>
-    <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="2"</div></div>
-    <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="2"</div></div>
+  <div data-gnl="3 8p">
+    <div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p"</div>
+    <div data-gnl="4"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="4"</div></div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="2"</div></div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="2"</div></div>
   </div>
-  <div data-deveb="3 8p">
-    <div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p"</div>
-    <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="2"</div></div>
-    <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="2"</div></div>
-    <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="6 6p" > data-deveb="3 8p" > data-deveb="4"</div></div>
+  <div data-gnl="3 8p">
+    <div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p"</div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="2"</div></div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="2"</div></div>
+    <div data-gnl="4"><div class="kutu kutu-genel">data-gnl="6 6p" > data-gnl="3 8p" > data-gnl="4"</div></div>
   </div>
 </div>
