--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -22,7 +22,7 @@ title: Deveb'in İnsanları
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
-      <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+      <i class="fa fa-gears beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="olumlu">DENETLEYİCİLER</h2> <br>
       Deveb ile her şeyin gerçekten sorunsuz olup olmadığını denetleyerek hataların olup olmadığı keşfini yaparlar.
     </div>
@@ -36,16 +36,16 @@ title: Deveb'in İnsanları
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
-      <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Belge Takımı</h2> <br>
-      Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
+      <i class="fa fa-eye beri-2" style="font-size:60pt;"></i> <br>
+      <h2 data-metin="olumlu">GÖRÜŞÇÜLER</h2> <br>
+      Deveb hakkında önerilerde bulunmak için görüşlerini yansıtırlar. Aralarında etkileyici görüşler belirten oldu... Senin de olabilir.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Yardım Takımı</h2> <br>
-      Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
+      <h2 data-metin="olumlu">TAKİPÇİLER</h2> <br>
+      Deveb gelişmelerini yakından takip ederek haberdar olmak isterler. Gelecekte deveb'i kullanacaklarına inanıyoruz.
     </div>
   </div>
 </div>
