--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 ---
 layout: home
 ---
-
-    <div data-gnl="8 8p" data-ort="8p">
-      <div data-gnl="8" data-ort="4">
-        <div style="overflow:hidden;" data-gnl="1 1p">
-          <h1 class="metin-deveb  beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
-          <p class="metin-gri-3 beri-2">
-            Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır.
-  Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
-          </p>
-          <p class="metin-gri-3 beri-2" data-deveb="ortada göbekte" data-gnl="1 1p">
-            <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
-            <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
-          </p>
-          <p style="font-size:16pt; text-align:center; color:#ccc;">
-            <i class="fa fa-html5" aria-hidden="true"></i>.
-            <i class="fa fa-css3" aria-hidden="true"></i>
-          </p>
-        </div>
-      </div>
-      <div class="merkez direk" data-gnl="8" data-ort="4">
-        <div data-gnl="6">
-          <div data-gnl="8" style="padding-left:2%">
-
-            <div class="beri-alt-1" data-deveb="göbekte yay" data-gnl="8" style="font-size:500%;background-color:#ccc; height:200px;">
-            </div>
-            <div class="ap-deveb beri-alt-1" data-gnl="8" style="height:60px;"></div>
-            <div class="ap-deveb beri-alt-1" data-gnl="1 5p" style="height:80px;"></div>
-
-            <div data-gnl="4 5p">
-              <div class="beri-sol-1 beri-alt-1" data-gnl="5" style="background-color:#ccc;"></div>
-            </div>
-
-            <div class="ap-deveb" data-gnl="8" style="height:60px;"></div>
-
-          </div>
-        </div>
-        <div data-gnl="2">
-          <div class="beri-sol-2 ap-deveb" data-gnl="6"></div>
-        </div>
-      </div>
+<div data-gnl="8 8p" data-ort="8p">
+  <div data-gnl="8" data-ort="4">
+    <div data-gnl="1 1p">
+      <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
+      <p class="metin-gri-3 beri-2">
+        Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır. Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
+      </p>
+      <p class="metin-gri-3 beri-2" data-gnl="1 1p ortada göbekte">
+        <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
+        <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
+      </p>
+      <p style="font-size:16pt; text-align:center; color:#ccc;">
+        <i class="fa fa-html5" aria-hidden="true"></i>.
+        <i class="fa fa-css3" aria-hidden="true"></i>
+      </p>
+    </div>
   </div>
+  <div data-gnl="8" data-ort="4">
+    <div data-gnl="6" style="padding-left:2%">
+        <div data-gnl="8" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
+        <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
+        <div data-gnl="1 5p" class="ap-deveb beri-alt-1" style="height:80px;"></div>
+        <div data-gnl="4 5p">
+          <div data-gnl="5" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
+        </div>
+        <div data-gnl="8" class="ap-deveb" style="height:60px;"></div>
+    </div>
+    <div data-gnl="2">
+      <div data-gnl="6" class="beri-sol-2 ap-deveb"></div>
+    </div>
+  </div>
+</div>
