--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 ---
-<div data-gnl="8 8p" data-ort="8p">
+<div data-gnl="8 8p üstte" data-ort="8p">
   <div data-gnl="8" data-ort="4">
     <div data-gnl="1 1p">
       <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
