--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
     <div data-gnl="1 1p">
       <h1 class="metin-deveb beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
       <p class="metin-gri-3 beri-2">
-        Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır. Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
+        Ağ (web) sayfalarında kullanılmak üzere geliştirilen bir önyüz çatısıdır. İngilizce ve Türkçe dil desteği ile birlikte geliştirilmektedir. Özellikleriyle öne çıkan Deveb'i keşfedin.
       </p>
       <p class="metin-gri-3 beri-2" data-gnl="1 1p ortada göbekte">
         <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
