--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ layout: home
       </p>
     </div>
   </div>
-  <div data-gnl="8" data-ort="4">
+  <div data-gnl="8 uzat" data-ort="4">
     <div data-gnl="6" style="padding-left:2%">
         <div data-gnl="8" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
         <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
         <div data-gnl="1 5p" class="ap-deveb beri-alt-1" style="height:80px;"></div>
-        <div data-gnl="4 5p">
+        <div data-gnl="4 5p uzun-ol">
           <div data-gnl="5" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
         </div>
         <div data-gnl="8" class="ap-deveb" style="height:60px;"></div>
