--- a/temalar/basit/index.html
+++ b/temalar/basit/index.html
@@ -4,68 +4,90 @@ title: Deveb Basit Tema
 ---
 <div data-gnl="1 1p" data-ort="3 3p">
   <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
   </div>
   <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
   </div>
-  <div data-gnl="1" data-ort="1">
-    <div data-gnl="1 4p"><img src="https://placehold.it/100x100?text=Haber+Resmi" alt="Haber Resmi"></div>
-    <div data-gnl="3 4p"><h1>Haber Başlığı</h1>
-    <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p></div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
+  </div>  <div data-gnl="1" data-ort="1">
+  <div data-kart="haber">
+  <img src="https://placehold.it/100x100" alt="resim">
+  <h1>Burası Bir Başlık</h1>
+  </div>
   </div>
 </div>
