--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -3,8 +3,9 @@ layout: s1n0/varsayilan
 title: Kurulum
 ---
     <p class="girlik">
-      <span class="simget">deveb</span> kullanımı kolay bir önyüz çatısıdır. Dosyaları dizinlerin arasında uygun yere kopyalayın. Html dosyaları içinde çağırın. Türkçe veya İngilizce olarak geliştirilen sürümler isteğe bağlı olarak kullanılır. 
+      <span class="simget">deveb</span> günümüz yöntemleriyle geliştirilen önyüz çatısıdır. Çalışma dizinlerinin arasında gerek duyacağınız dosyaları ekleyin. Ve kullanmak istediğiniz html dosyaları içinde çağırın. Hepsi bu!
     </p>
+
     <p data-gnl>
       <a data-basmal data-gnl="_o 0" class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip" style="border:1px solid purple; padding:10px;">İNDİR: deveb-s1n0.zip</a>
     </p>
@@ -21,5 +22,7 @@ title: Kurulum
       <link href="/css/deveb-s1n0/deveb-en.css" rel="stylesheet">
     {% endhighlight %}
 
-    <p>Not: İngilizce diliyle geliştirilen sürüm, türkçe sürümü geriden takip etmektedir. Türkçe sürüme göre daha az özelliğe sahip olabilir ve hata görülebilir.</p>
+    <p>
+      Not: İngilizce diliyle geliştirilen sürüm, türkçe sürümü geriden takip etmektedir. Türkçe sürüme göre daha az özelliğe sahip olabilir ve hata görülebilir.
+    </p>
 
