--- a/1.0/tr/index.html
+++ b/1.0/tr/index.html
@@ -17,14 +17,14 @@ title: Başlangıç
     <i class="fa fa-desktop" aria-hidden="true" style="font-size:2em;"></i>
     </p>
     <h1>UYARLAMALI</h1>
-    <p>Küçük ekran öncelikli tasarla</p>
+    <p>Küçük görüntülük öncelikli tasarla</p>
   </div>
   <div data-kart style="width:300px;">
 
       <p style="font-size:23px;">
         <i class="fa fa-github" aria-hidden="true" style="font-size:2em;"></i>
       </p>
-      <h1>ÜCRETSİZ</h1>
+      <h1>ÖZGÜR</h1>
       <p>Github düzleminde açık kaynak</p>
   </div>
   <div data-kart style="width:300px;">
@@ -33,7 +33,7 @@ title: Başlangıç
         <i class="fa fa-search" aria-hidden="true" style="font-size:2em;"></i>
       </p>
       <h1>OKUNABİLİR</h1>
-      <p>İnsan için yazması ve okuması basit</p>
+      <p>Kolay okunur & yazılır</p>
   </div>
   <div data-kart style="width:300px;">
 
@@ -41,7 +41,7 @@ title: Başlangıç
       <i class="fa fa-css3" aria-hidden="true" style="font-size:2em;"></i>
     </p>
     <h1>ÇAĞDAŞ</h1>
-    <p>Elverişli en iyi imkanlarla</p>
+    <p>Elverişli en iyi olanaklarla</p>
   </div>
 </div>
 
@@ -57,9 +57,9 @@ title: Başlangıç
 <h1>Yeni Şeyler Var!</h1>
 <p>
   HTML sınıfları yerine HTML veri-öznitelikleri ile çalışmaktadır. Bazı özellikleri
-  uyarlamalı olabilmesi için ekran örgüsüyle iliştirilmiş olarak çalışır. Çoklu parça
+  uyarlamalı olabilmesi için görüntülük örgüsüyle iliştirilmiş olarak çalışır. Çoklu parça
   düzenine sahip kap örgüsü kullanıma hazırdır. Sadece bu özelliği olmayıp genleşme,
-  konumlama gibi yararlı özellikleri de barındırır. Küçük ekran öncelikli çalışan
+  konumlama gibi yararlı özellikleri de barındırır. Küçük görüntülük öncelikli çalışan
   özelliklerimizi yakından incelemek için belleti sayfalarını inceleyin.
 </p>
 
